--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@CHSUVladimir/ad-api",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "packadge for connect to api ad",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/CHSUVladimir/ad-api.git"
+    "url": "https://github.com/CHSUVladimir/ad-api"
   },
   "scripts": {
     "build": "tsc",
