--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "@CHSUVladimir/ad-api",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "packadge for connect to api ad",
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/CHSUVladimir/ad-api"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "compilerOptions": {
+    "skipLibCheck": true
   },
   "scripts": {
     "build": "tsc",
@@ -15,7 +21,7 @@
     "tslint": "tslint -p tslint -p tsconfig.json",
     "codestyle": "npm run prettier && npm run tslint",
     "docsify": "docsify serve ./docs",
-    "typedoc": "npx typedoc src/index.ts --exclude **/{node_modules,test,doc}/**/* . --out docs/api/api",
+    "typedoc": "npx typedoc src/index.ts --exclude **/{node_modules,test,doc}/**/* . --out docs/api",
     "docs": "npm run typedoc && npm run docsify"
   },
   "husky": {
@@ -27,9 +33,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.2.0",
-    "@types/mocha": "^10.0.0",
     "@types/node": "^18.11.4",
-    "docsify-cli": "^4.4.4",
+    "docsify-cli": "^4.4.2",
     "husky": "^8.0.1",
     "jest": "^29.2.1",
     "prettier": "^2.7.1",
@@ -41,7 +46,6 @@
   },
   "dependencies": {
     "cross-fetch": "^3.1.5",
-    "node-fetch": "^3.2.10",
     "node-http": "^0.0.5"
   },
   "include": [
